src/objects/child__c.object
<CustomObject>
    <fields>
        <fullName>AccName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>Parent__c</referenceTo>
        <relationshipLabel>childs</relationshipLabel>
        <relationshipName>childs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <label>child</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>child Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>childs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>